# bot_rain_py

./: .gitignore  ApiKeys.py  LICENSE  README.md  main.py  pyproject.toml  pyproject.toml.bac  test.py
config/: ApiKeys.py
modules/: Ban_me_random.py  Ban_small.py  COVID.py  Good_morning.py  InterruptTest.py  NewMember.py  OHO.py  OnSetuRequest.py  anime_timesche.py  ant_recall.py  birthday_searcher.py  bot_self_event.py  hitokoto.py  moegirl_info.py  moyu.py  needZIP.py  onGroupMessage.py  onNudgeEvent.py  pa.py  pic_helper.py  self_update.py  wather.py  weather.py
modules/123/: APIs.py
modules/123/wowsAuto/: autoUpdate.py
modules/Audacious/: Audacious.py  __init__.py
modules/Noob/: Noob.py  __init__.py
modules/Swallow/: __init__.py  swallow.py
modules/Wows/: __init__.py  dataBase.py  wows.py  wows_sql_data.py
modules/Wows/wowsAuto/: autoNavalWars.py
modules/Wows/wowsCore/: wows.py
modules/crawl/: __init__.py  crawl.py
modules/ll_worship/: __init__.py  worship.py
modules/petpet/: __init__.py  petpet.py
modules/support_of_me/: support.py
modules/throw/: __init__.py  throw.py
modules/wows/: APIs.py  __init__.py  dataBase.py
modules/wows/wowsAuto/: autoUpdate.py  iwarship.py
modules/wows/wowsCore/: guess.py  roll.py  wows.py
modules/wows/wowsReport/: report.py
modules/wows_auto_update/: __init__.py  wows_auto_update.py
modules/wows_report/: __init__.py  wows_report.py
src/wows_data/: user_data.data  user_recent_data.db  wows_exp.json  wows_ship_list.json  wows_ship_official_name.txt  wows_ship_v1.txt
wows/: APIs.py  __init__.py  dataBase.py  utility.py
wows/wowsAuto/: autoNavalWars.py  autoUpdate.py  iwarship.py
wows/wowsCore/: guess.py  roll.py  wows.py
wows/wowsReport/: report.py
