[tool.poetry]
name = "bot_rain"
version = "0.1.0"
description = ""
authors = ["intmax"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
prettytable = ">=2.5.0"
pycryptodome = ">=3.12.0"
qrcode = ">=7.3.1"
Pillow = ">=9.0.0"
SQLAlchemy = ">=1.4.29"
matplotlib = ">=3.5.1"
ujson = ">=5.1.0"
graia-scheduler = ">=0.0.6"
graia-saya = ">=0.0.13"
regex = ">=2021.11.10"
graia-broadcast = ">=0.14.5"
aiohttp = {version = ">=3.8.1", extras = ["speedups"]}
playwright = ">=1.17.2"
aiofile = "^3.7.4"
imageio = "^2.16.1"
lxml = "^4.9.1"
saucenao-api = {git = "https://github.com/Int-0X7FFFFFFF/saucenao_api.git"}
bs4 = "^0.0.1"
html2image = "^2.0.1"
pyOpenSSL = "^22.0.0"
rich = "^12.5.1"
aiofiles = "^0.8.0"
line-profiler-pycharm = "^1.1.0"
pyminizip = "^0.2.6"
PixivPy-Async = "^1.2.14"
freetype-py = "^2.3.0"
graia-ariadne = {extras = ["full"], version = "^0.11.7"}
asyncpg = "^0.29.0"
opencv-python-headless = "^4.10.0.84"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"